Login mediante token JWT
Asignación de Roles y Control de Acceso
Para asignar roles a cada usuario y personalizar lo que cada uno puede ver, sigue estos pasos:

1. Almacenar Roles en la Base de Datos: Asegúrate de que tu modelo de usuario incluya un campo para roles, que puede ser una lista o un conjunto de roles.

2. Incluir Roles en el Token JWT: Modifica tu método generateToken para incluir los roles del usuario en los claims del token.

Code de Ejemplo:
public String generateToken(User user) {
    Claims claims = Jwts.claims().setSubject(user.getEmail());
    claims.put("roles", user.getRoles()); // Asegúrate de que `getRoles` devuelve una lista o conjunto de roles

    return Jwts.builder()
        .setClaims(claims)
        .setIssuedAt(new Date())
        .setExpiration(new Date(System.currentTimeMillis() + 1000 * 60 * 60 * 10)) // 10 horas de validez
        .signWith(getKey())
        .compact();
}

3. Control de Acceso Basado en Roles: Utiliza los roles incluidos en el token JWT para controlar el acceso en tu aplicación. Spring Security facilita la implementación de seguridad basada en roles:

Codigo Ejemplo:
@PreAuthorize("hasRole('ADMIN')")
public ResponseEntity<?> someAdminOnlyMethod() {
    return ResponseEntity.ok("Solo visible por admins");
}
Asegúrate de configurar Spring Security correctamente para que interprete los roles desde el token JWT.

--- a/registro-usuarios/src/main/resources/static/login.html
+++ b/registro-usuarios/src/main/resources/static/login.html
@@ -27,18 +27,18 @@
                                         <h4 class="text-dark mb-4">Bienvenido!</h4>
                                     </div>
                                     <form class="user" onsubmit="login(event)">
-                                        <div class="mb-3"><input class="form-control form-control form-control-user" type="email" aria-describedby="emailHelp" id="exampleInputEmail" name="email" placeholder="Introduzca correo electrónico..."></div>
-                                        <div class="mb-3"><input class="form-control form-control form-control-user" type="password" id="exampleInputPassword" name="password" placeholder="Contraseña"></div>
+                                        <div class="mb-3"><input class="form-control form-control-user" type="email" aria-describedby="emailHelp" id="exampleInputEmail" name="email" placeholder="Introduzca correo electrónico..."></div>
+                                        <div class="mb-3"><input class="form-control form-control-user" type="password" id="exampleInputPassword" name="password" placeholder="Contraseña"></div>
                                         <div class="mb-3">
                                             <div class="custom-control custom-checkbox small">
                                                 <div class="form-check"><input type="checkbox" class="form-check-input custom-control-input" id="formCheck-1"><label class="form-label form-check-label custom-control-label" for="formCheck-1">Recuerdame</label></div>
                                             </div>
-                                        </div><button class="btn btn-primary d-block btn-user w-100" type="submit">Iniciar Sesion</button>
-                                        <hr>
+                                        </div>
+                                        <button class="btn btn-primary d-block btn-user w-100" type="submit">Iniciar Sesion</button>
                                         <hr>
                                     </form>
-                                    <div class="text-center"><a class="small" href="forgot-password.html">Has olvidado tu contraseña??</a></div>
-                                    <div class="text-center"><a class="small" href="register.html"></a></div>
+                                    <div class="text-center"><a class="small" href="forgot-password.html">Has olvidado tu contraseña?</a></div>
+                                    <div class="text-center"></div>
                                 </div>
                             </div>
                         </div>
@@ -60,9 +60,11 @@
                 },
                 body: JSON.stringify({email: email, password: password}),
             })
-            .then(response => {
-                if (response.ok) {
-                    window.location.href = "/index.html";
+            .then(response => response.json()) // Asegúrate de que el servidor responde con JSON
+            .then(data => {
+                if (data.jwtToken) { // Asumimos que el servidor responde con un objeto que incluye jwtToken
+                    localStorage.setItem('jwtToken', data.jwtToken); // Guarda el token en localStorage
+                    window.location.href = "/index.html"; // Redirige a index.html o a otra página principal
                 } else {
                     alert("Credenciales inválidas. Por favor, intente de nuevo.");
                 }
