--- a/registro-usuarios/src/main/resources/static/login.html
+++ b/registro-usuarios/src/main/resources/static/login.html
@@ -60,17 +60,26 @@
                 },
                 body: JSON.stringify({email: email, password: password}),
             })
-            .then(response => response.json()) // Asegúrate de que el servidor responde con JSON
-            .then(data => {
-                if (data.jwtToken) { // Asumimos que el servidor responde con un objeto que incluye jwtToken
-                    localStorage.setItem('jwtToken', data.jwtToken); // Guarda el token en localStorage
-                    window.location.href = "/index.html"; // Redirige a index.html o a otra página principal
+            .then(response => {
+                if(response.ok) {
+                    response.json();
                 } else {
+                    response.text().then(text => alert(text));
+                }})
+            .then(data => {
+                if (data.jwtToken) {
+                    localStorage.setItem('jwtToken', data.jwtToken);
+                    window.location.href = "/index.html";
+                } else {
+                    response.text().then(text => alert(text));
                     alert("Credenciales inválidas. Por favor, intente de nuevo.");
                 }
             })
-            .catch(error => console.error('Error:', error));
+            .catch(error => {
+                console.error('Error:', error);
+            });
         }
+
     </script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
