--- a/registro-usuarios/src/main/resources/static/login.html
+++ b/registro-usuarios/src/main/resources/static/login.html
@@ -39,6 +39,11 @@
                                     </form>
                                     <div class="text-center"><a class="small" href="forgot-password.html">Has olvidado tu contraseña?</a></div>
                                     <div class="text-center"></div>
+                                    <div class="text-center">
+                                        <a class="small" href="register.html"
+                                          >Todavia no tiene cuenta? Registrese!</a
+                                        >
+                                      </div>
                                 </div>
                             </div>
                         </div>
