--- a/registro-usuarios/src/main/resources/static/register.html
+++ b/registro-usuarios/src/main/resources/static/register.html
@@ -42,6 +42,7 @@
                         id="first_name"
                         name="firstName"
                         placeholder="Nombre"
+                        required
                       />
                     </div>
                     <div class="col-sm-6">
@@ -51,6 +52,7 @@
                         id="last_name"
                         name="lastName"
                         placeholder="Apellidos"
+                        required
                       />
                     </div>
                   </div>
@@ -61,6 +63,7 @@
                       id="email_input"
                       name="email"
                       placeholder="Direccion de correo electrónico"
+                      required
                     />
                   </div>
                   <div class="row mb-3">
@@ -71,6 +74,7 @@
                         id="password_input"
                         name="password"
                         placeholder="Contraseña"
+                        required
                       />
                     </div>
                     <div class="col">
@@ -80,6 +84,7 @@
                         id="passwordConfirm"
                         name="passwordConfirm"
                         placeholder="Confirmar contraseña"
+                        required
                       />
                     </div>
                   </div>
@@ -118,9 +123,8 @@
         var passwordConfirm = document.getElementById("passwordConfirm").value;
 
         if (password !== passwordConfirm) {
-          alert(
-            "Las contraseñas no coinciden. Por favor, verifica e intenta de nuevo."
-          );
+          document.getElementById('error').textContent = "Las contraseñas no coinciden. Por favor, verifica e intenta de nuevo.";
+          document.getElementById('error').style.display= "block";
           return;
         }
 
