--- a/registro-usuarios/src/main/resources/static/profile.html
+++ b/registro-usuarios/src/main/resources/static/profile.html
@@ -238,7 +238,7 @@
         }
     
         function redirectToLogin() {
-            window.location.href = '/login.html';
+            //window.location.href = '/login.html';
         }
     
         function logout() {
