boton inicio lateral

--- a/registro-usuarios/src/main/resources/static/profile.html
+++ b/registro-usuarios/src/main/resources/static/profile.html
@@ -19,7 +19,7 @@
 <body id="page-top">
     <div id="wrapper">
         <nav class="navbar align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark">
-            <div class="container-fluid p-0"><a
+            <div class="container-fluid p-0"><a   href="index.html"
                     class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
                     <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-book-open"></i></div>
                     <div class="sidebar-brand-text mx-3"><span>ChatHub</span></div>
@@ -27,6 +27,7 @@
                 <hr class="sidebar-divider my-0">
                 <ul class="navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item"></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home"></i><span>Inicio</span></a></li>
                     <li class="nav-item"><a class="nav-link active" href="profile.html"><i
                                 class="fas fa-user"></i><span>Perfil</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="table.html"><i
@@ -125,7 +126,7 @@
                             <div class="card mb-3">
                                 <div class="card-body text-center shadow"><img class="rounded-circle mb-3 mt-4" id="profileImage" src="assets/img/default.png" width="160" height="160">
                                     <div class="mb-3">
-                                        <button class="btn btn-primary btn-sm" type="button">Cambiaimagen</button>
+                                        <button class="btn btn-primary btn-sm" type="button">Cambiar imagen</button>
                                     </div>
                                 </div>
                             </div>
